--- a/templates/home.html
+++ b/templates/home.html
@@ -4,23 +4,23 @@
 
 {% block content %}
 <div class="jumbotron bg-light p-5 rounded">
-    <h1 class="display-4">Find Your Perfect Homestay</h1>
-    <p class="lead">Book unique accommodations or list your property to earn extra income.</p>
+    <h1 class="display-4" data-translate="find-perfect-homestay">Find Your Perfect Homestay</h1>
+    <p class="lead" data-translate="book-description">Book unique accommodations or list your property to earn extra income.</p>
     <hr class="my-4">
-    <p>Explore our selection of homestays or create an account to get started.</p>
+    <p data-translate="explore-description">Explore our selection of homestays or create an account to get started.</p>
     <div class="d-flex gap-2">
-        <a class="btn btn-primary btn-lg" href="{{ url_for('renter.search') }}" role="button">Find a Homestay</a>
+        <a class="btn btn-primary btn-lg" href="{{ url_for('renter.search') }}" role="button" data-translate="find-homestay-btn">Find a Homestay</a>
         {% if not current_user.is_authenticated %}
-            <a class="btn btn-outline-primary btn-lg" href="{{ url_for('auth.register') }}" role="button">Sign Up Now</a>
+            <a class="btn btn-outline-primary btn-lg" href="{{ url_for('auth.register') }}" role="button" data-translate="register">Sign Up Now</a>
         {% elif current_user.is_owner() %}
-            <a class="btn btn-outline-primary btn-lg" href="{{ url_for('owner.add_homestay') }}" role="button">List Your Homestay</a>
+            <a class="btn btn-outline-primary btn-lg" href="{{ url_for('owner.add_homestay') }}" role="button" data-translate="add-homestay">List Your Homestay</a>
         {% endif %}
     </div>
 </div>
 
 <!-- Featured Homestays -->
 <section class="mt-5">
-    <h2 class="mb-4">Featured Homestays</h2>
+    <h2 class="mb-4" data-translate="featured-homestays">Featured Homestays</h2>
     <div class="row">
         {% for homestay in homestays %}
         <div class="col-md-4 mb-4">
@@ -40,7 +40,7 @@
                     </p>
                 </div>
                 <div class="card-footer">
-                    <a href="{{ url_for('renter.view_homestay', id=homestay.id) }}" class="btn btn-primary">View Details</a>
+                    <a href="{{ url_for('renter.view_homestay', id=homestay.id) }}" class="btn btn-primary" data-translate="view-details">View Details</a>
                 </div>
             </div>
         </div>
