--- a/templates/owner/room_detail_owner.html
+++ b/templates/owner/room_detail_owner.html
@@ -88,8 +88,7 @@
                             <!-- Nút xóa ảnh -->
                             <div class="mt-1">
                                 <a href="{{ url_for('owner.delete_room_image', image_id=img.id) }}"
-                                   class="btn btn-sm btn-outline-danger"
-                                   onclick="return confirm('Are you sure you want to delete this image?');">
+                                   class="btn btn-sm btn-outline-danger">
                                    Delete
                                 </a>
                             </div>
