--- a/templates/owner/add_room_images.html
+++ b/templates/owner/add_room_images.html
@@ -90,8 +90,7 @@
                                                     </button>
                                                 {% endif %}
                                                 <a href="{{ url_for('owner.delete_room_image', image_id=image.id) }}" 
-                                                   class="btn btn-sm btn-outline-danger"
-                                                   onclick="return confirm('Are you sure you want to delete this image?');">
+                                                   class="btn btn-sm btn-outline-danger">
                                                     Delete
                                                 </a>
                                             </div>
