--- a/templates/auth/complete_facebook_signup.html
+++ b/templates/auth/complete_facebook_signup.html
@@ -37,7 +37,7 @@
           
           <!-- Display Facebook name as information -->
           <div class="mb-3">
-            <label class="form-label">Facebook Account Name</label>
+            <label class="form-label">Account Name</label>
             <input type="text" 
                    class="form-control" 
                    value="{{ form_data.facebook_name or '' }}" 
