--- a/templates/auth/complete_google_signup.html
+++ b/templates/auth/complete_google_signup.html
@@ -35,7 +35,7 @@
           
           <!-- Display Google name as information -->
           <div class="mb-3">
-            <label class="form-label">Google Account Name</label>
+            <label class="form-label">Account Name</label>
             <input type="text" 
                    class="form-control" 
                    value="{{ form_data.google_name or '' }}" 
