--- a/templates/auth/register.html
+++ b/templates/auth/register.html
@@ -104,11 +104,21 @@
           <div class="separator my-3">
             <span class="px-2 text-muted">OR</span>
           </div>
-          <a href="{{ url_for('auth.login_google') }}" class="btn btn-outline-danger w-100 mb-2">
-            <i class="fab fa-google me-2"></i> Sign up with Google
+          
+          <!-- Facebook login button -->
+          <a href="{{ url_for('auth.login_facebook') }}" class="btn social-btn facebook-btn mb-2">
+            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="white" class="social-icon">
+              <path d="M9 8h-3v4h3v12h5v-12h3.642l.358-4h-4v-1.667c0-.955.192-1.333 1.115-1.333h2.885v-5h-3.808c-3.596 0-5.192 1.583-5.192 4.615v3.385z"/>
+            </svg>
+            <span>Register with Facebook</span>
           </a>
-          <a href="{{ url_for('auth.login_facebook') }}" class="btn btn-outline-primary w-100">
-            <i class="fab fa-facebook-f me-2"></i> Sign up with Facebook
+
+          <!-- Google login button -->
+          <a href="{{ url_for('auth.login_google') }}" class="btn social-btn google-btn">
+            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="white" class="social-icon">
+              <path d="M12.545,10.239v3.821h5.445c-0.712,2.315-2.647,3.972-5.445,3.972c-3.332,0-6.033-2.701-6.033-6.032s2.701-6.032,6.033-6.032c1.498,0,2.866,0.549,3.921,1.453l2.814-2.814C17.503,2.988,15.139,2,12.545,2C7.021,2,2.543,6.477,2.543,12s4.478,10,10.002,10c8.396,0,10.249-7.85,9.426-11.748L12.545,10.239z"/>
+            </svg>
+            <span>Register with Google</span>
           </a>
         </div>
       </div>
@@ -131,6 +141,40 @@
   content: '';
   flex: 1;
   border-bottom: 1px solid #dee2e6;
+}
+
+/* Social buttons styling */
+.social-btn {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  padding: 10px 15px;
+  border-radius: 4px;
+  font-weight: 500;
+  color: white;
+  text-decoration: none;
+  transition: all 0.3s ease;
+  margin-bottom: 10px;
+}
+
+.social-btn:hover {
+  opacity: 0.9;
+  color: white;
+}
+
+.social-icon {
+  margin-right: 10px;
+}
+
+.facebook-btn {
+  background-color: #3b5998;
+  border: 1px solid #3b5998;
+}
+
+.google-btn {
+  background-color: #db4437;
+  border: 1px solid #db4437;
 }
 </style>
 {% endblock %}
